# Kirby42Bot

./: .gitignore  README.md  dockerfile  pyproject.toml
Kirby42Bot/: bigquery.py  kirby_gradio.py  testing.ipynb  twitch-irc.py
Kirby42Bot/config/: __init__.py
